# network-capacity-forecast

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: app.py
data/: anomalies_ground_truth.csv  network_traffic.parquet
docs/: architecture.md
notebooks/: 01_walkthrough.ipynb
scripts/: compare_models.py  detect_anomalies.py  generate_readme_plots.py
src/network_forecast/: __init__.py  anomaly.py  data_generator.py  evaluation.py  forecasters.py  sql_features.py
tests/: test_anomaly.py  test_data_generator.py  test_evaluation.py  test_forecasters.py
