[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-forecast"
version = "0.1.0"
description = "Network capacity forecasting and anomaly detection on broadband telemetry"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Naveed Abbas", email = "naviabbast@gmail.com"},
]
license = {text = "MIT"}
keywords = ["time-series", "forecasting", "anomaly-detection", "network", "telemetry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24,<2.0",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "statsmodels>=0.14",
    "duckdb>=0.10",
    "pyarrow>=14.0",
    "plotly>=5.17",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.32",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.urls]
Repository = "https://github.com/Naveed-0730/network-capacity-forecast"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "SIM"]
ignore = ["E501", "F401"]
